Fix mockup viewer nav alignment (#1017)

--- a/src/styles/mockupViewer.css
+++ b/src/styles/mockupViewer.css
@@ -58,6 +58,10 @@ body {
   user-select: none;
 }
 
+.prev {
+  left: 0;
+}
+
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
